# roobuilder

./: .gitignore  .roobuilder.jcfg  2  ChangeLog  INSTALL.txt  README  README.md  capture.syscap  config1.builder  configure.ac  gmon.out  meson-metadata.build  meson.build  org.roojs.roobuilder.json  org.roojs.roobuilder.metainfo.xml  roobuilder.desktop  test-AL0LMY.vala.c
app/metainfo/: org.roojs.roobuilder.metainfo.xml
debian/: README  README.Debian  README.source  autoreconf.after  autoreconf.before  changelog  changelog.dch  control  copyright  files  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  roobuilder.cron.d.ex  roobuilder.doc-base.ex  roobuilder.substvars  watch.ex
debian-old/: autoreconf.after  changelog  control  copyright  debhelper-build-stamp  files
debian-old/roobuilder/DEBIAN/: control  md5sums
debian/roobuilder/DEBIAN/: control  md5sums
debian/upstream/: metadata.ex
gitlive/roobuilder/src/: Application.vala.c  Main.vala.c  Resources.vala.c  Spawn.vala.c
gitlive/roobuilder/src/Builder4/: About.vala.c  ClutterFiles.vala.c  DialogConfirm.vala.c  DialogFiles.vala.c  DialogPluginWebkit.vala.c  DialogSaveModule.vala.c  DialogSaveTemplate.vala.c  DialogTemplateSelect.vala.c  EditProject.vala.c  Editor.vala.c  FakeServer.vala.c  GtkView.vala.c  MainWindow.vala.c  PopoverAddObject.vala.c  PopoverAddProp.vala.c  PopoverFileDetails.vala.c  PopoverProperty.vala.c  RooProjectSettings.vala.c  StandardErrorDialog.vala.c  ValaCompileErrors.vala.c  ValaCompileResults.vala.c  ValaProjectSettingsPopover.vala.c  WindowAddProp.vala.c  WindowLeftProjects.vala.c  WindowLeftProps.vala.c  WindowLeftTree.vala.c  WindowRightPalete.vala.c  WindowRooView.vala.c  WindowState.vala.c
gitlive/roobuilder/src/JsRender/: Dir.vala.c  Gtk.vala.c  JsRender.vala.c  JsonGen.vala.c  Lang.vala.c  Node.vala.c  NodeToGtk.vala.c  NodeToJs.vala.c  NodeToVala.vala.c  PlainFile.vala.c  Roo.vala.c
gitlive/roobuilder/src/Palete/: CompileError.vala.c  CompletionProvider.vala.c  Gir.vala.c  GirObject.vala.c  Gtk.vala.c  Javascript.vala.c  Palete.vala.c  Roo.vala.c  RooDatabase.vala.c  ValaSource.vala.c  ValaSourceCompiler.vala.c  VapiParser.vala.c
gitlive/roobuilder/src/Project/: Gtk.vala.c  GtkValaSettings.vala.c  Project.vala.c  Roo.vala.c
gitlive/roobuilder/src/ccode/: Makefile.vala.c  valaccodeassignment.vala.c  valaccodecommaexpression.vala.c  valaccodedostatement.vala.c  valaccodeemptystatement.vala.c  valaccodeexpression.vala.c  valaccodeexpressionstatement.vala.c  valaccodefile.vala.c  valaccodefunctiondeclarator.vala.c  valaccodeidentifier.vala.c  valaccodeincludedirective.vala.c  valaccodeinitializerlist.vala.c  valaccodelabel.vala.c  valaccodemacroreplacement.vala.c  valaccodenewline.vala.c  valaccodereturnstatement.vala.c  valaccodeswitchstatement.vala.c  valaccodetypedefinition.vala.c  valaccodeunaryexpression.vala.c  valaccodewhilestatement.vala.c  valaccodewriter.vala.c
gitlive/roobuilder/src/codegen/: valaccode.vala.c  (+8 more)
notes/: flutter.txt
resources/: GtkUsage.txt  RooUsage.txt  bootstrap.builder.html  bootstrap4.builder.html  build_docs.sh  gresources.xml
resources/css/: roobuilder.css
resources/data/: object.defaults.json
resources/doc/: Roo.docs.init.js  Roo.docs.js  Roo.docs.template.js  docs.css  gtk.html  roojs-bootstrap-debug.js  roojs-core-debug.js
resources/doc/css-bootstrap/: font-awesome.css
resources/doc/css-bootstrap4/: bootstrap.min.css  roojs-bootstrap.css
resources/html/: bootstrap.builder.html  roo.builder.js
src/: Application.vala  GenericDelegate.vala  Lsp.vala  Main.vala  Makefile.am  Resources.vala  Settings.vala  Spawn.vala
src/Builder4/: .roobuilder.jcfg  About.bjs  About.vala  ClutterFiles.bjs  ClutterFiles.vala  CodeInfo.bjs  CodeInfo.vala  DialogConfirm.bjs  DialogConfirm.vala  DialogFiles.bjs  DialogFiles.vala  DialogNewComponent.bjs  DialogNewComponent.vala  DialogPluginWebkit.bjs  DialogPluginWebkit.vala  DialogSaveModule.bjs  DialogSaveModule.vala  DialogSaveTemplate.bjs  DialogSaveTemplate.vala  DialogTemplateSelect.bjs  DialogTemplateSelect.vala  EditProject.bjs  EditProject.vala  Editor.bjs  Editor.vala  FakeServer.vala  GladeView.bjs  GladeView.vala  GladeuiView.bjs  GladeuiView.vala  GtkView.bjs  GtkView.vala  LoadingProgress.bjs  LoadingProgress.vala  MainWindow.bjs  MainWindow.vala  PopoverAddObject.bjs  PopoverAddObject.vala  PopoverAddProp.bjs  PopoverAddProp.vala  (+37 more)
src/JsRender/: Dir.vala  Flutter.vala  Gtk.vala  JsRender.vala  Json.vala  JsonGen.vala  Node.vala  NodeProp.vala  NodePropType.vala  NodeToGlade.vala  NodeToGtk.vala  NodeToJs.vala  NodeToVala.c.valatmp  NodeToVala.vala  NodeToValaExtended.vala  NodeToValaWrapped.vala  NodeWriter.vala  PlainFile.vala  Roo.vala
src/Palete/: CompileError.vala  CompletionModel.vala  CompletionProposal.vala  CompletionProvider.vala  Flutter.vala  Gir.vala  GirFile.vala  GirObject.vala  Gtk.vala  HoverProvider.vala  Javascript.vala  JsonSerialize.vala  LanguageClient.vala  LanguageClientDummy.vala  LanguageClientJavascript.vala  LanguageClientVala.vala  Palete.vala  Roo.vala  RooDatabase.vala  Schema.vala  Symbol.vala  SymbolDatabase.vala  SymbolDatabaseUpdate.vala  SymbolFile.vala  SymbolFileCollection.vala  SymbolFormat.vala  SymbolGir.vala  SymbolLoader.vala  SymbolNodeProp.vala  SymbolQuery.vala  SymbolVala.vala  ValaCompileQueue.vala  ValaCompileRequest.vala  ValaErrorReporter.vala  ValaSource.vala  ValaSourceCompiler.vala  ValaSymbolBuilder.vala  ValaSymbolGirBuilder.vala  ValalCompileQueue.vala  VapiParser.vala
src/Project/: Flutter.vala  Gtk.vala  GtkValaSettings.vala  Meson.vala  Project.vala  Roo.vala  VapiSelection.vala
src/SQ/: Database.vala  Query.vala  Schema.vala
src/c/: jscore_object_call_as_function.c
src/codegen/: valaccodeassignmentmodule.vala  valaccodecompiler.vala
src/vapi/: clutter-1.0.vapi  gtksourceview-5.vapi  javascriptcore.vapi
src/vapi/test-old/: clutter-1.0.vapi
tests/: sample_working_gladeui.vala
tools/: flutter_extract.php  flutter_nodes.php  flutter_sqlite.php
(+1 files in other folders)
